FIX SVG STRETCH IN STUDY

--- a/components/s_layout/S_header.module.css
+++ b/components/s_layout/S_header.module.css
@@ -1,1 +1,10 @@
-
+.svg {
+  width: auto;
+  height: 160%;
+}
+@media (min-aspect-ratio: 4368/2169) {
+  .svg {
+    width: 160%;
+    height: auto;
+  }
+}
